[package]
name = "toy-time"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
warp = { git = "https://github.com/Molkars/warp", rev = "c98c734bd56d162f6bd6d11eff8130b990429c98" }
tokio = { version = "1.26.0",  default_features = false, features = ["macros", "rt", "sync", "signal"] }
async-std = { version = "1.12.0", features = ["attributes", "unstable", "tokio1"] }






